fixing about.css have two diferent result on mobile and on cumputer with same width

--- a/css/about.css
+++ b/css/about.css
@@ -6,7 +6,9 @@
 #about {
     display: flex;
     flex-wrap: wrap;
-    zoom: 85%;
+    justify-content: center;
+    padding: 40px 20px;
+    gap: 40px;
 }
 
 .about-content {
